
INCLUDE_DIRECTORIES(
	.
)


FILE(GLOB BussIK_SRCS "*.cpp" )
FILE(GLOB BussIK_HDRS "*.h" )

ADD_LIBRARY(BussIK ${BussIK_SRCS} ${BussIK_HDRS})

IF(INSTALL_EXAMPLES)
    INSTALL(TARGETS BussIK
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib${LIB_SUFFIX}
            ARCHIVE DESTINATION lib${LIB_SUFFIX})
ENDIF()
